Fix issue where immediately after activating a dynamic playlist you couldn't drag a track to the top.

BUG: 149263

svn path=/branches/stable/extragear/multimedia/amarok/; revision=705231